# nextgen-databases

./: .gitignore  0-AI-MANIFEST.a2ml  AI.a2ml  AI.djot  EXPLAINME.adoc  Justfile  PROOF-NEEDS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  ROADMAP.adoc  TEST-NEEDS.md  TOOLING-STATUS.adoc  TOPOLOGY.md  URGENT-RESCRIPT-MIGRATION.md  flake.nix  guix.scm  llm-warmup-dev.md  llm-warmup-user.md  opsm.toml  setup.sh  stapeln.toml
.github/workflows/: instant-sync.yml  verify-tlaplus.yml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  CLADE.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.scm  MUST.contractile  STATE.a2ml  STATE.scm  TRUST.contractile
.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
.machine_readable/anchors/: ANCHOR.a2ml
.well-known/: security.txt
contractiles/intend/: Intentfile.a2ml
contractiles/must/: Mustfile.a2ml
contractiles/trust/: Trustfile.a2ml
lithoglyph/: .gitignore  .tool-versions  0-AI-MANIFEST.a2ml  AI.a2ml  AI.djot  ARCHITECTURE.adoc  CHANGELOG.md  CONTRIBUTING.adoc  Containerfile  HONEST-STATUS-2026-02-13.md  MONOREPO.md  MOVED.md  PHILOSOPHY.adoc  PROPOSED-MONOREPO-STRUCTURE.md  QUICKSTART.adoc  README.adoc  RENAME-SUMMARY.md  ROADMAP.adoc  SECURITY.md  TOPOLOGY.md  VERSIONING.adoc  WHITEPAPER.md  eclexiaiser.toml  justfile  lithoglyph.ipkg  opsm.toml  references.bib  selur-compose.yml
lithoglyph/.bot_directives/: README.scm
lithoglyph/.claude/: CLAUDE.md
lithoglyph/.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  HANDOVER.a2ml  HANDOVER.scm  META.scm  NEUROSYM.scm  ROADMAP.scm  STATE.scm
lithoglyph/.well-known/: security.txt
lithoglyph/analytics/: .gitignore  MOVED.md  Project.toml  README.adoc  README.md  ROADMAP.adoc  UNIFIED-ROADMAP.scm  config.example.toml  rescript.json
lithoglyph/api/: README.adoc  build.zig
lithoglyph/beam/: BUILD-STATUS.md  EXTENDED-SESSION-SUMMARY.md  LITH-BEAM-INTEGRATION.md  M11-HTTP-API-SPEC.md  META.scm  MOVED.md  README.adoc  ROADMAP.adoc  RSR_OUTLINE.adoc  SECURITY-REQUIREMENTS.scm  SESSION-SUMMARY-M10-DAY3.md  STATE.scm  gleam.toml  test_minimal.erl  test_nif.erl  test_rust.erl
lithoglyph/beam/native_rust/: Cargo.toml  build.rs
lithoglyph/beam/native_rust/src/: lib.rs
lithoglyph/clients/: README.md
lithoglyph/core-factor/: README.adoc  minimal-ffi-test.factor  test-ffi.factor
lithoglyph/core-forth/: README.adoc
lithoglyph/core-zig/: README.adoc  build.zig  test-db-open.c  test-execution.sh  test-ffi-integration.c  test-install.sh  test-version-only.c  test_install_blocks.sh
lithoglyph/distributed/: README.md  rescript.json
lithoglyph/docs/: API-REFERENCE.adoc  DEPLOYMENT.adoc  (+8 more)
lithoglyph/geo/: .gitignore  Cargo.toml  ECOSYSTEM.scm  META.scm  MOVED.md  README.adoc  ROADMAP.adoc  STATE.scm  UNIFIED-ROADMAP.scm  config.example.toml
lithoglyph/geo/fuzz/: Cargo.toml
lithoglyph/geo/src/: config.rs  lib.rs  main.rs
lithoglyph/geo/src/api/: mod.rs
lithoglyph/geo/src/index/: mod.rs  rtree.rs
lithoglyph/studio/: .gitignore  Cargo.toml  MONOREPO.md  MOVED.md  README.adoc  ROADMAP.adoc  RSR_OUTLINE.adoc  UNIFIED-ROADMAP.scm  deno.json  gossamer.conf.json  justfile  package.json  rescript.json
lithoglyph/studio/src/: App.res  DataEntryPanel.res  FbqldtPreview.res  FieldEditor.res  GqldtPreview.res  NormalizationPanel.res  ProofAssistant.res  QueryBuilder.res  RuntimeBridge.res  SchemaBuilder.res  StatusBar.res  Types.res  main.tsx
lithoglyph/studio/src-tauri/: Cargo.toml  tauri.conf.json
lithoglyph/studio/src-tauri/icons/: icon.icns
lithoglyph/studio/src-tauri/src/: main.rs
lithoglyph/studio/src/backend/: main.rs
nqc/: .gitignore  0-AI-MANIFEST.a2ml  Justfile  README.md  gleam.toml  manifest.toml  nqc-enhanced-launcher.sh  nqc-launcher.sh  nqc.launcher.a2ml  opsm.toml
quandledb/: .gitignore  0-AI-MANIFEST.a2ml  CHANGELOG.md  CONTRIBUTING.md  EXPLAINME.adoc  PROOF-NEEDS.md  ROADMAP.adoc  WHITEPAPER.md  references.bib
typeql-experimental/: .gitignore  0-AI-MANIFEST.a2ml  DESIGN-2026-03-01-typeql-experimental.adoc  Justfile  README.adoc  WHITEPAPER.md  deno.json  opsm.toml  references.bib  rescript.json  typeql-experimental.ipkg
verisim-core/: .gitignore  0-AI-MANIFEST.a2ml  EXPLAINME.adoc  LICENSE  Project.toml  README.adoc  opsm.toml
verisim-modular-experiment/: .gitignore  0-AI-MANIFEST.a2ml  EXPLAINME.adoc  Justfile  LICENSE  PLAN.adoc  PROOF-NEEDS.md  Project.toml  README.adoc  justfile  opsm.toml  verisim-modular-experiment.ipkg
verisimdb/: .gitignore  0-AI-MANIFEST.a2ml  BEST-IN-CLASS-ROADMAP.md  CHANGELOG.adoc  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.adoc  EXPLAINME.adoc  IMPLEMENTATION-ROADMAP.adoc  Justfile  KNOWN-ISSUES.adoc  PLANNER-IMPLEMENTATION-STATUS.md  QUICKSTART-USER.adoc  README.adoc  RELEASE-NOTES-v0.1.0-alpha.md  ROADMAP.adoc  SECURITY.md  SONNET-TASKS.md  TOPOLOGY.md  WHITEPAPER.md  WHITEPAPER.md.invariants.md  kraft-comparison.adoc  llm-warmup-dev.md  llm-warmup-user.md  osv-scanner.toml  proven-coherence.md  references.bib  stapeln.toml
verisimdb/fuzz/: Cargo.toml
verisimdb/fuzz/fuzz_targets/: fuzz_octad_id.rs
verisimdb/rust-core/verisim-nif/: Cargo.toml
verisimdb/rust-core/verisim-nif/src/: lib.rs
verisimdb/rust-core/verisim-provenance/: Cargo.toml
verisimdb/rust-core/verisim-provenance/src/: lib.rs  persistent.rs
verisimdb/rust-core/verisim-semantic/: Cargo.toml
verisimdb/rust-core/verisim-semantic/src/: circuit_compiler.rs  circuit_registry.rs  lib.rs  persistent.rs  proven_bridge.rs  sanctify_bridge.rs  verification_keys.rs  zkp.rs  zkp_bridge.rs
verisimdb/rust-core/verisim-spatial/: Cargo.toml
verisimdb/rust-core/verisim-spatial/src/: lib.rs  persistent.rs
verisimdb/rust-core/verisim-temporal/: Cargo.toml
verisimdb/rust-core/verisim-temporal/src/: diff.rs  lib.rs  persistent.rs
verisimdb/rust-core/verisim-tensor/: Cargo.toml
verisimdb/rust-core/verisim-tensor/src/: lib.rs  persistent.rs
verisimdb/rust-core/verisim-vector/: Cargo.toml
verisimdb/rust-core/verisim-vector/src/: hnsw.rs  lib.rs  persistent.rs
(+1457 files in other folders)
