# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "lithoglyph-studio"
version = "0.1.0"
description = "Zero-friction interface for Lith with dependently-typed GQL"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
license = "PMPL-1.0-or-later"
repository = "https://github.com/hyperpolymath/lithoglyph-studio"
edition = "2021"

[dependencies]
gossamer-rs = { path = "../../../../gossamer/bindings/rust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
