# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "verisimdb-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.verisim-octad]
path = "../rust-core/verisim-octad"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_octad_id"
path = "fuzz_targets/fuzz_octad_id.rs"
test = false
doc = false

[profile.release]
debug = 1
