# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "lithoglyph-studio"
version = "0.1.0"
description = "Zero-friction interface for Lith with dependently-typed GQL"
authors = ["Hyperpolymath"]
license = "PMPL-1.0-or-later"
repository = "https://github.com/hyperpolymath/lithoglyph-studio"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
