# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "verisim-provenance"
description = "Provenance modality - origin tracking, lineage chains, and actor trails"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
verisim-storage = { path = "../verisim-storage", optional = true }
tokio.workspace = true
chrono.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile = "3"
proptest.workspace = true

[features]
default = []
redb-backend = ["verisim-storage/redb-backend"]
