# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "verisim-tensor"
description = "Tensor modality - multi-dimensional array operations via Burn"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ndarray.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
serde_json.workspace = true
verisim-storage = { path = "../verisim-storage", optional = true }
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
proptest.workspace = true

[features]
default = []
redb-backend = ["verisim-storage/redb-backend"]
